# voipc

./: CMakeLists.txt  README.md
3party/qjson/: CMakeLists.txt
3party/qjson/src/: CMakeLists.txt
src/: CMakeLists.txt  Config.h.in  PjCallback.cpp  PjCallback.h  application.cpp  application.h  commands.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  voipc.cpp  voipc.h
src/network/: clientthread.cpp  clientthread.h  package.cpp  package.h  server.cpp  server.h  serverpackagemanager.cpp  serverpackagemanager.h
