PROJECT(voipc)

cmake_minimum_required(VERSION 2.8)

### Tijeritas app info
SET(VOIPC_ORGANIZATION_NAME "VoipC")
SET(VOIPC_ORGANIZATION_DOMAIN "VoipC")
SET(VOIPC_APPLICATION_NAME "VoipC")

SET(VOIPC_VERSION_MAJOR 0)
SET(VOIPC_VERSION_MINOR 1)
SET(VOIPC_VERSION_PATH  0)

SET(VOIPC_VERSION ${VOIPC_VERSION_MAJOR}.${VOIPC_VERSION_MINOR}.${VOIPC_VERSION_PATH})

ADD_SUBDIRECTORY(src)
